<resources>
    <string name="app_name">Ibex</string>
    <string name="correoEdt">Ingrese su correo</string>
    <string name="correo">Correo</string>
    <string name="passwordEdt">Ingrese su contraseña</string>
    <string name="password">Contraseña</string>
    <string name="ingresarBtn">Ingresar</string>
    <string name="seleccionaEmpresaTxt">Selecciona una empresa</string>
    <string name="txt_periodoSelec">Seleccionar periodo</string>
    <string name="textoInicio">CONTROL DE PATRIMONIO GUBERNAMENTAL</string>
    <string name="olvidarContraseña">¿Olvidaste tu contraseña?</string>
    <string name="selecciona_una_empresa">Selecciona una empresa</string>
    <string name="selecciona_su_periodo">selecciona su periodo</string>
    <string name="reportes">Reportes</string>
    <string name="escanear">Escanear</string>
    <string name="catalogo">Catalogo</string>
    <string name="agregar">Agregar</string>
    <string name="muebles">Muebles</string>
    <string name="inmuebles">Inmuebles</string>
    <string name="opciones">Opciones</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cambiar_empresa">Cambiar empresa</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="nombre_de_la_empresa">Nombre de la empresa</string>
    <string name="informacion">Informacion</string>
    <string name="siguiente">siguiente</string>
</resources>