<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InmueblesFragment">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="101dp"
        android:layout_height="19dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/imgLogoEmpresa"
        android:layout_width="333dp"
        android:layout_height="77dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txtNomEmpresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="32dp"
        android:text="@string/nombre_de_la_empresa"
        android:textAlignment="center"
        android:textColor="@color/textos"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogoEmpresa" />

    <Button
        android:id="@+id/btnAgregarInmu"
        android:layout_width="308dp"
        android:layout_height="115dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/menu_button"
        android:drawableLeft="@drawable/ic_agregar"
        android:text="@string/agregar"
        android:textAlignment="center"
        android:textColor="@color/textos"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNomEmpresa" />

    <Button
        android:id="@+id/btnCatalagoInmu"
        android:layout_width="308dp"
        android:layout_height="115dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/menu_button"
        android:drawableLeft="@drawable/ic_catalogo"
        android:text="@string/catalogo"
        android:textColor="@color/textos"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAgregarInmu" />

</androidx.constraintlayout.widget.ConstraintLayout>